manifestfiles/result-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-deployment
  namespace: vote
spec:
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
      - name: result
        image: kodekloud/examplevotingapp_result:before
        ports:
        - containerPort: 80
