manifestfiles/vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-deployment
  namespace: vote
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vote-before
  template:
    metadata:
      labels:
        app: vote-before
    spec:
      containers:
      - name: vote-before
        image: kodekloud/examplevotingapp_vote:before
        ports:
        - containerPort: 80
