manifestfiles/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: vote
spec:
  selector:
    app: db
  ports:
  - port: 5432
    targetPort: 5432
