manifestfiles/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: vote
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
