manifestfiles/result-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-service
  namespace: vote
spec:
  type: NodePort
  selector:
    app: result
  ports:
  - port: 5001
    targetPort: 80
    nodePort: 31001
