manifestfiles/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-service
  namespace: vote
spec:
  type: NodePort
  ports:
  - port: 5000
    targetPort: 80
    nodePort: 31000
  selector:
    app: vote-before
