manifestfiles/result-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: worker-ingress
  namespace: vote
spec:
  ingressClassName: nginx
  rules:
  - host: ingress-nginx-dc.com
    http:
      paths:
      - path: /result
        pathType: Prefix
        backend:
          service:
            name: result-service
            port:
              number: 5001
